<resources>
    <string name="app_name">MyNote</string>
    <string-array name="repeat_array">
        <item>Нет</item>
        <item>Час</item>
        <item>День</item>
        <item>Неделя</item>
        <item>Месяц</item>
        <item>Год</item>
    </string-array>

    <string name="tab_simpleNoteTitle">Простая запись</string>
    <string name="tab_timerTitle">Таймер</string>

    <string name="dialogueOk">Ок</string>
    <string name="dialogueCancel">Отмена</string>

    <string name="emptyNotesYet">Записей пока нет</string>
    <string name="viewSimpleNoteBottom">Установленное время: %1$s | Повторы: %2$s</string>
    <string name="toastIncorrectTimeForStart">Установленное время раньше текущего, либо равно ему!</string>
    <string name="toastNoteStarted">Напоминание активировано!</string>
    <string name="dialogueTitleDeleteNote">Удалить выбранную запись?</string>
    <string name="toastNoteDeleted">Запись перемещена в корзину</string>

    <string name="emptyTimersYet">Ни одного таймера пока нет</string>
    <string name="timerProgress">%1$d мин.</string>
    <string name="dialogueTitleDeleteTimer">Удалить выбранный таймер?</string>
    <string name="toastTimerDeleted">Таймер перемещен в корзину</string>
    <string name="toastTimerStarted">Таймер сработает через %1$d мин.</string>
    <string name="timerDefaultName">Введите название</string>
    <string name="dialogueTitleEditTimer">Введите новое название</string>

    <string name="popupTrash">Корзина</string>
    <string name="popupUpdateScreen">Обновить окно</string>
    <string name="popupUpdated">Обновлено</string>

    <string name="notifTimerWorkTitle">Прогресс таймера: %1$s</string>
    <string name="notifTimerWorkedTitle">Сработал таймер!</string>
    <string name="notifNoteTitle">Напоминание о задаче!</string>

    <string name="activityTitleTrash">Корзина</string>
    <string name="dialogueClearTrash">Очистить корзину?</string>
    <string name="dialogueClearTrashPositive">Очистить</string>
    <string name="toastClearedTrash">Очищено</string>
    <string name="emptyTrashYet">Корзина пуста</string>
    <string name="delayTrashTimer">%1$s мин.</string>
    <string name="dialogueDeleteFromTrash">Удалить запись навсегда?</string>
    <string name="toastDeletedFromTrash">Удалено</string>
    <string name="backNoteFromTrashTitle">Вернуть запись из корзины?</string>
    <string name="toastBackedNoteFromTrash">Возвращено</string>

    <string name="activityNoteEditTitleHint">Заголовок</string>
    <string name="activityNoteEditContentHint">Содержимое</string>
    <string name="activityNoteEditTextLabel">Установленное время</string>
</resources>
